--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	/* new codes begin */
+	<meta charset="UTF-8">
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	/* new codes end */
 	<title>CDTC_MedConnect-Project</title>
 	<!-- css link -->
 	<link rel="stylesheet" href="style.css">
