--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 </head>
 <body>
     <header>
-        <div class="header-container">
+        <div class="head-container">
             <div class="logo">
                 <img src="images/amazon-logo.png" alt="Amazon Logo">
             </div>
             <div class="deliver">
                 <i class="fas fa-map-marker-alt"></i>
-                <h5><span>Deliver to</span> <br>Nigeria</h5>
+                <h5><span>Deliver to</span><br>Nigeria</h5>
             </div>
             <div class="search-bar">
                 <form action="#">
@@ -29,7 +29,7 @@
                         <option value="">2</option>
                     </select>
                     <input type="text" id="search" name="search" placeholder="Search Amazon">
-                    <i class="fas fa-search"></i>
+                    <button type="submit"><i class="fas fa-search"></i></button>
                 </form>
             </div>
             <div class="flag">
@@ -39,7 +39,8 @@
                 </select>
             </div>
             <div>
-                <p>Hello, sign in</p><span>Account & Lists</span>
+                <p>Hello, sign in</p>
+                <span>Account & Lists</span>
             </div>
             <div class="returns">
                 <h5>Returns <br><span>& Orders</span></h5>
@@ -60,12 +61,12 @@
             </ul>
         </nav>
     </header>
-    <figure class="slider">
-        <div class="slides">
-            <img src="images/mom smile.jpg" alt="slide image1">
-        </div>
-    </figure>
     <main>
+        <figure class="slider">
+            <div class="slides">
+                <img src="images/mom smile.jpg" alt="slide image1">
+            </div>
+        </figure>
         <div class="first-collection-container">
             <div class="collection-item">
                 <figure>
@@ -76,41 +77,21 @@
             </div>
             <div class="collection-item">
                 <figcaption>Gaming Accessories</figcaption>
-                <div class="grid-container-1">
-                    <div class="grid-item-1">
-                        <img src="images/first collection/gamimg accessories/Fuji_Quad_Headset_1x._SY116_CB667159060_.jpg" alt="headset">
-                    </div>
-                    <div class="grid-item-1">
-                        <img src="images/first collection/gamimg accessories/Fuji_Quad_Keyboard_1x._SY116_CB667159063_.jpg" alt="keyboard">
-                    </div>
-                    <div class="grid-item-1">
-                        <img src="images/first collection/gamimg accessories/Fuji_Quad_Mouse_1x._SY116_CB667159063_.jpg" alt="mice">
-                    </div>
-                    <div class="grid-item-1">
-                        <img src="images/first collection/gamimg accessories/Fuji_Quad_Chair_1x._SY116_CB667159060_.jpg" alt="">
-                    </div>
+                <div class="grid-container">
+                    <div class="grid-item"><img src="images/first collection/gamimg accessories/Fuji_Quad_Headset_1x._SY116_CB667159060_.jpg" alt="headset"></div>
+                    <div class="grid-item"><img src="images/first collection/gamimg accessories/Fuji_Quad_Keyboard_1x._SY116_CB667159063_.jpg" alt="keyboard"></div>
+                    <div class="grid-item"><img src="images/first collection/gamimg accessories/Fuji_Quad_Mouse_1x._SY116_CB667159063_.jpg" alt="mice"></div>
+                    <div class="grid-item"><img src="images/first collection/gamimg accessories/Fuji_Quad_Chair_1x._SY116_CB667159060_.jpg" alt=""></div>
                     <figcaption><a href="#">see more</a></figcaption>
                 </div>
             </div>
             <div class="collection-item">
                 <figcaption>Refresh your Space</figcaption>
-                <div class="grid-container-2">
-                    <div class="grid-item-2">
-                        <img src="images/first collection/refresh ur space/DesktopQuadCat_186x116_health-beauty_B07662GN57_01.23._SY116_CB619238939_.jpg" alt="">
-                        <figcaption>Health and beauty</figcaption>
-                    </div>
-                    <div class="grid-item-2">
-                        <img src="images/first collection/refresh ur space/DesktopQuadCat_186x116_home_B08RCCP3HV_01.23._SY116_CB619238939_.jpg" alt="">
-                        <figcaption>Home</figcaption>
-                    </div>
-                    <div class="grid-item-2">
-                        <img src="images/first collection/refresh ur space/DesktopQuadCat_186x116_kitchen_B0126LMDFK_01.23._SY116_CB619238939_.jpg" alt="">
-                        <figcaption>Kitchen</figcaption>
-                    </div>
-                    <div class="grid-item-2">
-                        <img src="images/first collection/refresh ur space/DesktopQuadCat_186x116_LP-HP_B08MYX5Q2W_01.23._SY116_CB619238939_.jpg" alt="">
-                        <figcaption>Dining</figcaption>
-                    </div>
+                <div class="grid-container">
+                    <div class="grid-item"><img src="images/first collection/refresh ur space/DesktopQuadCat_186x116_health-beauty_B07662GN57_01.23._SY116_CB619238939_.jpg" alt=""><figcaption>Health and beauty</figcaption></div>
+                    <div class="grid-item"><img src="images/first collection/refresh ur space/DesktopQuadCat_186x116_home_B08RCCP3HV_01.23._SY116_CB619238939_.jpg" alt=""><figcaption>Home</figcaption></div>
+                    <div class="grid-item"><img src="images/first collection/refresh ur space/DesktopQuadCat_186x116_kitchen_B0126LMDFK_01.23._SY116_CB619238939_.jpg" alt=""><figcaption>Kitchen</figcaption></div>
+                    <div class="grid-item"><img src="images/first collection/refresh ur space/DesktopQuadCat_186x116_LP-HP_B08MYX5Q2W_01.23._SY116_CB619238939_.jpg" alt=""><figcaption>Dining</figcaption></div>
                     <figcaption><a href="#">see more</a></figcaption>
                 </div>
             </div>
@@ -120,19 +101,10 @@
                     <img src="images/first collection/gadgets store/41aF1Kpc1iL._SY160_.jpg" alt="">
                     <figcaption>Smart Phones</figcaption>
                 </figure>
-                <div class="last-item" style="display: flex;">
-                    <figure>
-                        <img src="images/first collection/gadgets store/316r7290SLL._SY75_.jpg" alt="">
-                        <figcaption>Tablets</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/first collection/gadgets store/31qcGgiIK7L._SY75_.jpg" alt="">
-                        <figcaption>Laptops</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/first collection/gadgets store/313zteqI9LL._SY75_.jpg" alt="">
-                        <figcaption>TVs</figcaption>
-                    </figure>
+                <div class="last-item">
+                    <figure><img src="images/first collection/gadgets store/316r7290SLL._SY75_.jpg" alt=""><figcaption>Tablets</figcaption></figure>
+                    <figure><img src="images/first collection/gadgets store/31qcGgiIK7L._SY75_.jpg" alt=""><figcaption>Laptops</figcaption></figure>
+                    <figure><img src="images/first collection/gadgets store/313zteqI9LL._SY75_.jpg" alt=""><figcaption>TVs</figcaption></figure>
                 </div>
                 <figcaption><a href="#">See more from Amazon Gadgets</a></figcaption>
             </div>
