update to index.html file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<option value="">All</option>
 						<option value="">2</option>
 					</select>
-					<input type="text" id="search" name="search" placeholder="Search Amazon" >
+					<input type="text" id="search" name="search" placeholder="Search MedConnect" >
 					<i class="fas fa-search"></i>
 
 				</form>
@@ -135,7 +135,7 @@
 			<!-- ---------fisrt item collection -->
 			<div class="collection-item">
 				<figure>
-					<figcaption style="font-weight: bold;">Amazon Gadget Store</figcaption>
+					<figcaption style="font-weight: bold;">MedConnect Store</figcaption>
 					<img src="images/first collection/gadgets store/41aF1Kpc1iL._SY160_.jpg" alt="">
 					<figcaption style="font-size: 12px;">Smart Phones</figcaption>
 				</figure>
@@ -400,45 +400,45 @@
 				<li><b>Get to know us</b></li>
 				<li><a href="#">Careers</a></li>
 				<li><a href="#">Blog</a></li>
-				<li><a href="#">About Amaazon</a></li>
+				<li><a href="#">About MedConnect</a></li>
 				<li><a href="#">Investors Relations</a></li>
-				<li><a href="#">Amazon Devices</a></li>
-				<li><a href="#">Amazon Science</a></li>
+				<li><a href="#">MedConnect Devices</a></li>
+				<li><a href="#">MedConnect Science</a></li>
 			</ul>	
 		</div>
 		<div>
 			<ul>
 				<li><b>Make Money with us </b></li>
-				<li><a href="#">Sell Products on Amazon </a></li>
-				<li><a href="#">Sell on Amazon Business </a></li>
-				<li><a href="#">Sell apps on Amazon </a></li>
+				<li><a href="#">Sell Products on MedConnect </a></li>
+				<li><a href="#">Sell on MedConnect Business </a></li>
+				<li><a href="#">Sell apps on MedConnect </a></li>
 				<li><a href="#">Become an Affiliate </a></li>
 				<li><a href="#">Advertise Your Products</a></li>
 				<li><a href="#">Self-Publish with Us </a></li>
-				<li><a href="#">Host an Amazon Hub </a></li>
+				<li><a href="#">Host an MedConnect Hub </a></li>
 				<li><a href="#">See More Make Money<br>with Us</a></li>
 			</ul>	
 		</div>
 		<div>
 			<uL>
-				<li><b>Amazon Payment Product</b></li>
-				<li><a href="#">Amazon Business Card</a></li>
+				<li><b>MedConnect Payment Product</b></li>
+				<li><a href="#">MedConnect Business Card</a></li>
 				<li><a href="#">Shop with Points</a></li>
 				<li><a href="#">Reload Your Balance</a></li>
-				<li><a href="#">Amazon Currency Converter</a></li>
+				<li><a href="#">MedConnect Currency Converter</a></li>
 				
 			</ul>
 		</div>
 		<div>
 			<ul>
 				<li><b>Let Us Help You</b></li>
-				<li><a href="#">Amazon and COVID-19</a></li>
+				<li><a href="#">MedConnect and COVID-19</a></li>
 				<li><a href="#">Your Account</a></li>
 				<li><a href="#">Your Orders</a></li>
 				<li><a href="#">Shipping Rates &amp; Policies</a></li>
 				<li><a href="#">Return Replacement</a></li>
 				<li><a href="#">Manage Your <br>Content and Devices</a></li>
-				<li><a href="#">Amazon Assistant</a></li>
+				<li><a href="#">MedConnect Assistant</a></li>
 				<li><a href="#">Help</a></li>
 			</ul>	
 		</div>
@@ -447,7 +447,7 @@
 	<!-- footer second section -->
 	<div class="section-2">
 		<!-- amazon logo -->
-		<img src="images/amazon-logo.png" alt="amazon logo" style="margin-right: 60px;">
+		<img src="images/amazon-logo.png" alt="MedConnect logo" style="margin-right: 60px;">
 		<!-- english -->
 		<form action="#">
 			<i class="fas fa-globe" style="color: #fff;"></i>
@@ -473,12 +473,12 @@
 	<div class="section-3">
 		<div class="column-1">
 			<ul>
-				<li><a href="#"><b>Amazon Music</b></a></li>
+				<li><a href="#"><b>MedConnect Music</b></a></li>
 				<li><a href="#">Stream millions <br>of songs</a></li>
 				<br>
 				<br>
 				<br>
-				<li><a href="#"><b>AmazonGlobal</b></a></li>
+				<li><a href="#"><b>MedConnectGlobal</b></a></li>
 				<li><a href="#">Ship Orders <br>Internationally</a></li>
 				<br>
 				<br>
@@ -490,7 +490,7 @@
 
 		<div class="column-2">
 			<ul>
-				<li><a href="#"><b>Amazon Ads</b></a></li>
+				<li><a href="#"><b>MedConnect Ads</b></a></li>
 				<li><a href="#">Reach customers <br>whereever they <br>spend their time</a></li>
 				<br>
 				<br>
@@ -511,7 +511,7 @@
 				<li><a href="#">Score deals <br>on fashion <br>brands</a></li>
 				<br>
 				<br>
-				<li><a href="#"><b>Amazon web <br>Services</b></a></li>
+				<li><a href="#"><b>MedConnect web <br>Services</b></a></li>
 				<li><a href="#">Scalable cloud <br>Computing <br>Services</a></li>
 				<br>
 				<br>
@@ -558,13 +558,13 @@
 				<br>
 				<br>
 				<br>
-				<li><a href="#"><b>Amazon Subscription <br>Boxes</b> <br>Top subscription boxes<br>-rignt to your door</a></li>
+				<li><a href="#"><b>MedConnect Subscription <br>Boxes</b> <br>Top subscription boxes<br>-rignt to your door</a></li>
 			</ul>
 		</div>
 
 		<div class="column-6">
 			<ul>
-				<li><a href="#"><b>Sell on Amazon</b> <br>Start a selling Account</a></li>
+				<li><a href="#"><b>Sell on MedConnect</b> <br>Start a selling Account</a></li>
 				<br>
 				<br>
 				<br>
@@ -583,7 +583,7 @@
 
 		<div class="column-7">
 			<ul>
-				<li><a href="#"><b>Amazon Business</b> <br>Everything <br>for<br>Your <br> Business</a></li>
+				<li><a href="#"><b>MedConnect Business</b> <br>Everything <br>for<br>Your <br> Business</a></li>
 				<br>
 				<br>
 				<li><a href="#"><b>IMDb</b><br>Movies, TV <br>& Celebrities</a></li>
@@ -596,20 +596,20 @@
 	</div>
 		<!-- <div class="line-1">
 				<ul>
-					<li><a href="#"><b>Amazon Music</b><br>Stream millions<br>of songs</a></li>
-					<li><a href="#"><b>Amazon Ads</b><br>Reach customers<br>whereever they<br>spend their time</a></li>
+					<li><a href="#"><b>MedConnect Music</b><br>Stream millions<br>of songs</a></li>
+					<li><a href="#"><b>MedConnect Ads</b><br>Reach customers<br>whereever they<br>spend their time</a></li>
 					<li><a href="#"><b>6am</b><br>Scores deals<br>on fashion<br>brands</a></li>
 					<li><a href="#"><b>AbeBooks</b><br>Book,art<br>&amp; collectibles</a></li>
 					<li><a href="#"><b>ACX<br></b>Audiobook Publishing<br>Made Easy</a></li>
-					<li><a href="#"><b>Sell on Amazon<br></b>Start a selling<br>Acount</a></li>
-					<li><a href="#"><b>Amazon<br>Business<br></b>Everything<br>For<br>Your Business</a></li>
+					<li><a href="#"><b>Sell on MedConnect<br></b>Start a selling<br>Acount</a></li>
+					<li><a href="#"><b>MedConnect<br>Business<br></b>Everything<br>For<br>Your Business</a></li>
 				</ul>
 		</div>
 		<div class="line-2">
 				<ul>
-					<li><a href="#"><b>AmazonGlobal</b><br>Ship Orders<br>Internationally</a></li>
+					<li><a href="#"><b>MedConnect</b><br>Ship Orders<br>Internationally</a></li>
 					<li><a href="#"><b>Home Services</b><br>Experienced Pros<br>Happiness<br>Guarantee</a></li>
-					<li><a href="#"><b>Amazon Web<br>Services</b><br>Scalable Cloud<br>Computing<br>services</a></li>
+					<li><a href="#"><b>MedConnect<br>Services</b><br>Scalable Cloud<br>Computing<br>services</a></li>
 					<li><a href="#"><b>Audible</b><br>Listen to book &amp;<br>Original<br>Audio<br>Performnces</a></li>
 					<li><a href="#"><b>Box office Mojo</b><br>Find Movie<br>Box Office Data</a></li>
 					<li><a href="#"><b>Goodreads</b><br>Book reviews<br>&amp;<br>recommendations</a></li>
@@ -632,7 +632,7 @@
 					<li><a href="#"><b>eero WIFI</b><br>Stream 4K Video<br>in Every Room</a></li>
 					<li style="margin-left: 40px;"><a href="#"><b>Blink</b><br>Smart Security<br>for Every<br>Home</a></li>
 					<li style="margin-left: 40px;"><a href="#"><b>Neighbors App</b><br>Real-Time Crime<br>&amp; Safety Alerts</a></li>
-					<li style="margin-left: 45px;"><a href="#"><b>Amazon Subscription<br>Boxes</b><br>Top subscription boxes<br> -right to your door</a></li>
+					<li style="margin-left: 45px;"><a href="#"><b>MedConnect Subscription<br>Boxes</b><br>Top subscription boxes<br> -right to your door</a></li>
 					<li><a href="#"><b>PillPack</b><br>Pharmacy<br>Simplified</a></li>
 				</ul>
 		</div>
@@ -651,7 +651,7 @@
 			</li>
 				
 		</ul>
-		<p class="copyright">&copy; 1996-2024, Amazon.com, Inc. or its affiliates</p>
+		<p class="copyright">&copy; 1996-2024, MedConnect.com, Inc. or its affiliates</p>
 	</small>
 </body>
 </html>
